# alpha-synuclein-agent

./: .gitignore  DEPLOYMENT.md  PROJECT_MAP.md  README.md  check4_gpu.py  check6_nb.py  cloud_setup.py  dump_nb.py  fix_braces.py  inject_viz.py  inventory.json  patch_harness.py  patch_notebook.py  patch_notebook_v3.py  pyproject.toml  requirements.txt  run_failed_exps.py  run_pipeline.py  test_char_embed.py  test_dev_reset.py  test_guard.py  test_guard_v2.py  verify_all.py  verify_session.py  verify_sync.py
.agents/: AGENTS.md
agent/: __init__.py
agent/core/: __init__.py  concise_logger.py  env_config.py  graph.py  llamafile_manager.py  llm_manager.py  memory.py  oracle.py  orchestrator.py  platform_detector.py  sandbox.py  session_manager.py  tee_logger.py  watchdog.py
agent/data/: __init__.py  features.py  loader.py  pipeline.py
agent/prompts/: __init__.py  system_prompt.py
agent/tools/: __init__.py  arxiv_tool.py  audit_tool.py  char_embedding_template.py  check_last_session.py  dev_reset.py  experiment_runner.py  harness_template.py  leaderboard_tool.py  memory_tool.py  rebuild_leaderboard.py  search_logger.py
alpha_synuclein_agent.egg-info/: PKG-INFO  SOURCES.txt
data/chroma_db/: chroma.sqlite3
data/processed/: class_weights.pkl  scaler.pkl  selector.pkl  variance_threshold.pkl
data/raw/: Data_alpha_synuclein.xlsx  alpha_synuclein.csv  csv_preview.txt
data/sandbox_test_exp/: _trainer.py  model.py
experiments/exp_001_laptop_logistic_regression_c_0_1/: config.yaml  (+3 more)
master_log/: agent_summary.md  leaderboard.json
notebooks/: run_agent.ipynb
(+610 files in other folders)
