[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-synuclein-agent"
version = "0.1.0"
description = "Autonomous ML research agent for alpha-synuclein peptide classification"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
